--- a/static/d/index.html
+++ b/static/d/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/vendor/epoch.min.css">
 <style>
  body { 
-  background:#Black url('../images/spider.jpg') no-repeat center top; 
+  background:Black url("../images/spider.jpg") no-repeat center top; 
   color: #41415b;
 } 
 </style>
