--- a/static/spider/index.html
+++ b/static/spider/index.html
@@ -5,9 +5,10 @@
 <link rel="stylesheet" href="/vendor/makerstrap.min.css">
 <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css">
 <style>
- body { 
-  background:#Black url('../images/spider.jpg') no-repeat center top; 
-  color: #41415b;
+ body {
+	background:Black url("../images/spider.jpg") no-repeat center top;
+	color: #41415b;
+	
 } 
 
 .url-cell {
@@ -39,7 +40,7 @@
   }
 }
 body,td,th {
-  color: #FFF;
+	color: #41415b;
 }
 </style>
 <title>Spider</title>
