--- a/static/about/index.html
+++ b/static/about/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="/vendor/makerstrap.min.css">
 <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css">
 <style type="text/css">
-body { background:#Black url('../images/shendeng.gif') no-repeat center top; 
+body { background:Black url("../images/shendeng.gif") no-repeat center top; 
 color: #41415b;
 }
 </style>
