--- a/static/about/index.html
+++ b/static/about/index.html
@@ -35,7 +35,7 @@ color: #41415b;
     <li>
       <p>Go offline! You and your colleagues should be able to
         <a href="/">browse</a> all the sites you visited/spidered earlier.
-        You can even activate the Web X-Ray Goggles to remix them and
+        You can even activate the Web aladdin to remix them and
         save your remixes.</p>
     </li>
   </ol>
