--- a/static/index.html
+++ b/static/index.html
@@ -69,7 +69,7 @@ html, body, .browser {
 
       <button id="webxray" class="btn btn-default" title="Goggles">
         <i class="fa fa-code-fork"></i>
-        <span class="hidden-xs">X</span>
+        <span class="hidden-xs">Aladdin</span>
       </button>
       <a id="spider" class="btn btn-default" href="/spider" target="_blank" title="Spider">
         <i class="fa fa-bug"></i>
