--- a/static/d/index.html
+++ b/static/d/index.html
@@ -13,7 +13,8 @@
 </style>
 <title>Diagnostics</title>
 <div class="container">
-  <h1><img style="margin-left:5px;" href="#" src="../images/gao_logo_bai.png">Diagnostics</h1>
+  <h1><img style="margin-left:5px;" href="#" src="../images/gao_logo_bai.png">
+      <img src="images/shendeng.gif">Diagnostics</h1>
   <div id="chart" class="epoch category10" style="height: 200px;"></div>
   <div class="well">
     Average megabits per second: <span id="speed">0</span>
