--- a/static/about/index.html
+++ b/static/about/index.html
@@ -11,7 +11,8 @@ color: #41415b;
 </style>
 <title>About</title>
 <div class="container">
-  <h1><img style="margin-left:5px;" href="#" src="../images/gao_logo_bai.png">About</h1>
+  <h1><img style="margin-left:5px;" href="#" src="../images/gao_logo_bai.png">
+      <img src="images/shendeng.gif">About</h1>
   <p>
     This is an app that caches your favorite parts of the
     Web to your computer, so you and your colleagues can do
