--- a/static/index.html
+++ b/static/index.html
@@ -54,8 +54,8 @@ html, body, .browser {
 <div class="browser">
   <div class="urlbar">
     <form action="/proxy">
-       <img href="#" src="images/gao_logo_bai.png">
-       <img src="images/shendeng.gif">
+       <img style="margin-left:2px;" href="#" src="images/gao_logo_bai.png">
+       <img style="margin-left:2px;" src="images/shendeng.gif">
       <input type="text" spellcheck="false" name="url" class="form-control" placeholder="http://">
       <button type="submit" class="btn btn-primary">
         Go <i class="fa fa-chevron-right"></i>
