--- a/static/spider/index.html
+++ b/static/spider/index.html
@@ -45,7 +45,8 @@ body,td,th {
 </style>
 <title>Spider</title>
 <div class="container">
-  <h1><img style="margin-left:5px;" href="#" src="../images/gao_logo_bai.png"><img src="images/shendeng.gif">Spider</h1>
+  <h1><img style="margin-left:2px;" href="#" src="../images/gao_logo_bai.png">Spider
+       <img style="margin-left:2px;" src="../images/shendeng.gif"></h1>
   <p>Use this page to cache entire websites for offline use.</p>
   <div id="app"></div>
 </div>
