--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@ body,td,th {
 <div class="browser">
   <div class="urlbar">
     <form action="/proxy">
-       <img style="margin-left:5px;" href="#" src="images/gao_logo_bai.png"width="70" height="45">
+       <img style="margin-left:5px;" href="#" src="images/gao_logo_bai.png"width="90" height="45">
       <input type="text" spellcheck="false" name="url" class="form-control" placeholder="http://">
       <button type="submit" class="btn btn-primary">
        <img src="images/rocket.png">
@@ -74,10 +74,10 @@ body,td,th {
         <img src="images/electro.png">
       </button>
       <a id="spider" class="btn btn-default" href="/spider" target="_blank" title="Spider">
-        <img src="images/poison.jpg">
+        <img src="images/poison.png">
       </a>
       <a class="btn btn-default" href="/about/" target="_blank" title="About">
-        <i class="fa fa-question"></i>
+        <img src="images/buoy.png">
       </a>
     </form>
   </div>
