--- a/static/index.html
+++ b/static/index.html
@@ -56,7 +56,7 @@ body,td,th {
 <title>Aladdin</title>
 <div class="browser">
   <div class="urlbar">
-    <form action="/proxy">
+    <form>
        <img style="margin-left:5px;" href="#" src="images/gao_logo_bai.png"width="90" height="45">
       <input type="text" spellcheck="false" name="url" class="form-control" placeholder="http://">
       <button type="submit" class="btn btn-primary">
