--- a/static/index.html
+++ b/static/index.html
@@ -81,7 +81,9 @@ body,td,th {
       </a>
     </form>
   </div>
-  <div class="content"></div>
+  <div class="content">
+  	aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+  </div>
 </div>
 <script src="/js/bundle.js"></script>
 <script>
