--- a/static/index.html
+++ b/static/index.html
@@ -56,18 +56,11 @@ body,td,th {
 <title>Aladdin</title>
 <div class="browser">
   <div class="urlbar">
-    <form>
+    <form action="/proxy">
        <img style="margin-left:5px;" href="#" src="images/gao_logo_bai.png"width="80" height="40">
       <input type="text" spellcheck="false" name="url" class="form-control" placeholder="http://">
       <button type="submit" class="btn btn-primary">
        <img src="images/rocket.png">
-      </button>
-
-      <!-- We're hiding the togetherJS button for now, it's not
-           particularly useful yet. -->
-      <button id="togetherjs" class="btn btn-default" title="Collaborate" style="display: none">
-        <i class="fa fa-user-plus"></i>
-        <span class="hidden-xs">Collaborate</span>
       </button>
 
       <button id="webxray" class="btn btn-default" title="Goggles">
@@ -170,30 +163,7 @@ window.addEventListener('load', function() {
   onHashChange();
 });
 
-// TogetherJS integration
 
-document.getElementById("togetherjs").addEventListener('click', function(e) {
-  if (typeof(TogetherJS) == 'undefined')
-    return alert("TogetherJS is not available, please try later.");
-  TogetherJS(this);
-});
-
-window.addEventListener('hashchange', function() {
-  if (typeof(TogetherJS) == 'undefined' || !TogetherJS.running)
-    return;
-
-  TogetherJS.send({type: 'urlChange', url: getCurrentURL()});
-});
-
-TogetherJSConfig_hub_on = {
-  'urlChange': function(msg) {
-    gotoURL(msg.url);
-  },
-  'togetherjs.hello': function(msg) {
-    if (!msg.sameUrl) return;
-    TogetherJS.send({type: 'urlChange', url: getCurrentURL()});
-  }
-};
 
 // X-Ray Goggles integration
 
